# Flask-site

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: base_log.py  config.py  database.py  error_handlers.py  main.py  router_main.py
app/auth/: UserLogin.py  auth_orm.py  router_auth.py  utils.py
app/auth/static/css/: styles.css
app/auth/templates/auth/: base_auth.html  edit_profile.html  login.html  profile.html  register.html
app/converter/: router_converter.py  utils.py
app/converter/templates/converter/: converter_page.html
app/logging/: base_log.py
app/news/: news_orm.py  router_news.py  utils.py
app/news/templates/news/: add_news_page.html  news_edit.html  news_number_page.html  news_page.html  not_found_news.html
app/notes/: notes_orm.py  router_notes.py  utils.py
app/notes/templates/notes/: edit_note.html  notes_add.html  notes_page.html  one_note_page.html
app/static/css/: styles.css
app/templates/: about.html  base.html  index.html
app/templates/template_error/: page401.html  page403.html  page404.html  page405.html  page500.html  page503.html
