[tool.poetry]
name = "flask-site"
version = "1.0.0"
description = ""
authors = ["DarkPythons <author@mail>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
flask = "3.0.3"
flask-sqlalchemy = "3.1.1"
psycopg2 = "2.9.9"
pydantic-settings = "2.3.4"
flask-login = "^0.6.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

